--- a/.gitignore
+++ b/.gitignore
@@ -361,5 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-/Callisto/img/luThink.pnm
-/Callisto/img/luPushups.pnm
+/Callisto/img/
+
+*.pnm
